--- a/style.css
+++ b/style.css
@@ -323,11 +323,11 @@ footer {
 }
 
 footer h5 {
-    color: #FFD700; /* Gold */
+    color: white; /* white */
 }
 
 footer p {
-    color: #FFD700; /* Gold */
+    color: white; /* white */
 }
 
 footer .btn {
